fix: fix notif and display chat on mobile

--- a/src/containers/MainPage/MainPage.css
+++ b/src/containers/MainPage/MainPage.css
@@ -13,7 +13,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  /* min-height: 80%; */
+  min-height: 80%;
   width: 100vw;
   background-color: #00e99d;
 }
@@ -27,22 +27,9 @@
 }
 
 @media (max-width: 576px) {
-  /* html {
-    height: 100%;
-  }
-  body {
-    min-height: 100%;
-  } */
-
   .wrapper {
-    /* height: calc(100vh - 60px); */
-    min-height: 100%;
     background-color: #f0f8ff;
   }
-
-  /* .button-send {
-    margin: 0 0 10px 0;
-  } */
 
   .button {
     margin-bottom: 10px;
